--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
      What is your favorite travel destination?
     <input name="destination" required="" size="81" type="text"/> 
     <br><br><br> 
-    Any recommendations (cool things to do, places to visit or restaurants to eat)? 
+    Any recommendations (cool things to do, places to visit, or restaurants to eat)? 
     <br><br> 
     <textarea cols="81" name="details" required="" rows="10">
     </textarea> 
