--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             name: fullname
         });
         analytics.alias('1234');
-        analytics.track('destination submitted', user, function() {
+        analytics.track('form data collected', user, function() {
             window.location.href = "";
         });
       }
