--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
 //         analytics.alias('1234');
         analytics.track('NEW TRACK', user, function() {
             window.location.href = "";
-        },
-          "integrations": {
-            "All": false,
-            "Mixpanel": false,
-            "Google Analytics": true
-          });
+        });
+//         },
+//           "integrations": {
+//             "All": false,
+//             "Mixpanel": false,
+//             "Google Analytics": true
+//           });
       }
     </script>
 </body> 
