--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
             name: fullname
         });
 //         analytics.alias('1234');
-        analytics.track('NEW TRACK', user, function() {
+          analytics.track('destination1 submitted', user, function() {
             window.location.href = "";
         });
+//         analytics.track('NEW TRACK', user, function() {
+//             window.location.href = "";
 //         },
 //           "integrations": {
 //             "All": false,
