--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             name: fullname
         });
 //         analytics.alias('1234');
-          analytics.track('destination1 submitted', user, function() {
+          analytics.track('NEW TRACK', user, function() {
             window.location.href = "";
         });
 //         analytics.track('NEW TRACK', user, function() {
