--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
             name: fullname
         });
 //         analytics.alias('1234');
-          analytics.track('NEW TRACK', user, function() {
-            window.location.href = "";
-        });
-//         analytics.track('NEW TRACK', user, function() {
+//           analytics.track('NEW TRACK', user, function() {
 //             window.location.href = "";
-//         },
-//           "integrations": {
-//             "All": false,
-//             "Mixpanel": false,
-//             "Google Analytics": true
-//           });
+//         });
+        analytics.track('NEW TRACK', user, function() {
+            window.location.href = "";
+        },
+          "integrations": {
+            "All": false,
+            "Mixpanel": false,
+            "Google Analytics": true
+          });
       }
     </script>
 </body> 
