--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 //           analytics.track('NEW TRACK', user, function() {
 //             window.location.href = "";
 //         });
-        analytics.track('NEW TRACK', user, function() {
+        analytics.track('NOT MIX', user, function() {
             window.location.href = "";
         },
           "integrations": {
