--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         });
 //         analytics.alias('1234');
           analytics.track('NEW GA PARAMS', user, function() {
-            window.location.href = "";
+            window.location.href = "",
             category: 'Account',
             label: 'Premium',
             value: 50
