--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
             destination: destination, 
             details: details
         };
-        analytics.identify('NEW IDENTIFY', {
+        analytics.identify('NEW IDENTIFYYY', {
             email: email, 
             name: fullname
         });
 //         analytics.alias('1234');
-          analytics.track('NEW GA PARAMS', user, function() {
+          analytics.track('NEW GA PARAMSSS', user, function() {
             window.location.href = "",
             category: 'Account',
             label: 'Premium',
