--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
             name: fullname
         });
 //         analytics.alias('1234');
-          analytics.track('NEW GA PARAMSSS', user, function() {
-            window.location.href = "",
-            category: 'Account',
-            label: 'Premium',
-            value: 50
+//           analytics.track('NEW GA PARAMSSS', user, function() {
+//             window.location.href = "",
+//             category: 'Account',
+//             label: 'Premium',
+//             value: 50
+//         });
+           analytics.track('destination SUBMITTED', user, function() {
+            window.location.href = "";
         });
 //         analytics.track('NEW GA PARAMS', user, function() {
 //             window.location.href = "";
