--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
            analytics.track('destination SUBMITTED', user, function() {
             window.location.href = "";
         });
+          window.location = 'http://www.google.com'
       }
     </script>
 </body> 
 </html>
+
+
