--- a/index.html
+++ b/index.html
@@ -89,8 +89,20 @@
     border: 1px solid black;
   }
 </style>
+       <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+
   </head>
   <body>
+      <amp-analytics type="segment">
+        <script type="application/json">
+          {
+            "vars": {
+              "writeKey": "cHAKBpweBEHhArk4dEfoox5CkwfUbYFx",
+              "name": "My Page Name"
+            }
+          }
+        </script>
+      </amp-analytics>
     <h1>Welcome to the mobile web</h1>
     <amp-img src="welcome.jpg" alt="Welcome" height="400" width="800"></amp-img>
 
