--- a/index.html
+++ b/index.html
@@ -99,10 +99,16 @@
             "vars": {
               "writeKey": "cHAKBpweBEHhArk4dEfoox5CkwfUbYFx",
               "name": "My Page Name"
+            },
+            "extraUrlParams": {
+              "properties.type": "article",
+              "properties.published_at": "2016-06-28",
+              "properties.author": "John Doe"
             }
           }
         </script>
       </amp-analytics>
+      
     <h1>Welcome to the mobile web</h1>
     <amp-img src="welcome.jpg" alt="Welcome" height="400" width="800"></amp-img>
 
