--- a/index.html
+++ b/index.html
@@ -100,10 +100,13 @@
               "writeKey": "cHAKBpweBEHhArk4dEfoox5CkwfUbYFx",
               "name": "My Page Name"
             },
-            "extraUrlParams": {
-              "properties.type": "article",
-              "properties.published_at": "2016-06-28",
-              "properties.author": "John Doe"
+          context: {
+            campaign: {
+              name: "TPS Innovation Newsletter",
+              source: "Newsletter",
+              medium: "email",
+              term: "tps reports",
+              content: "image link"
             }
           }
         </script>
