--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
               "name": "My Page Name"
             },
             "extraUrlParams": {
-              "properties.type": "article",
+              "properties.type": "toTestt",
               "properties.published_at": "2016-06-28",
-              "properties.author": "John Doe"
+              "properties.author": "Spencer"
             }
           }
         </script>
