--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> 
+<!DOCTYPE html> 
 <html> 
 <head> 
     <title>Home Questionnaire!<span id="selection-marker-1" class="redactor-selection-marker"></span></title> 
@@ -51,11 +51,28 @@
         });
           window.location = 'http://www.google.com'
       }
+        analytics.track({
+          userId: '019mr8mf4r',
+          event: 'Purchased an Item',
+          properties: {
+            revenue: 39.95,
+            shippingMethod: '2-day'
+          },
+          context: {
+            campaign: {
+              name: "TPS Innovation Newsletter",
+              source: "Newsletter",
+              medium: "email",
+              term: "tps reports",
+              content: "image link"
+            }
+          }
+        });
     </script>
 </body> 
-</html> -->
+</html>
 
-<!doctype html>
+<!-- <!doctype html>
 <html amp lang="en">
   <head>
     <meta charset="utf-8">
@@ -114,7 +131,7 @@
 
   </body>
 </html>
-
+ -->
 
 
 
