--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               "name": "My Page Name"
             },
             "extraUrlParams": {
-              "properties.type": "toTestt",
+              "properties.typeeee": "toTestt",
               "properties.published_at": "2016-06-28",
               "properties.author": "Spencer"
             }
