--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
               "name": "My Page Name"
             },
             "extraUrlParams": {
-              "properties.typeeee": "toTestt",
-              "properties.published_at": "2016-06-28",
-              "properties.author": "Spencer"
+              "properties.utm_source": "toTestt",
+              "properties.utm_campaign": "2016-06-28",
+              "properties.utm_type": "Spencer"
             }
           }
         </script>
