--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html> 
+<!DOCTYPE html> 
 <html> 
 <head> 
     <title>Home Questionnaire!<span id="selection-marker-1" class="redactor-selection-marker"></span></title> 
@@ -70,9 +70,9 @@
         });
     </script>
 </body> 
-</html> -->
+</html>
 
-<!doctype html>
+<!-- <!doctype html>
 <html amp lang="en">
   <head>
     <meta charset="utf-8">
@@ -130,7 +130,7 @@
     <amp-img src="welcome.jpg" alt="Welcome" height="400" width="800"></amp-img>
 
   </body>
-</html>
+</html> -->
  
 
 
