--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 </body> 
 </html>
 
-<!-- <!doctype html>
+<!-- 
+<!doctype html>
 <html amp lang="en">
   <head>
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <title>Hello, AMPs</title>
-<!--     <link rel="canonical" href="http://example.ampproject.org/article-metadata.html"> -->
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <script type="application/ld+json">
       {
@@ -130,7 +130,7 @@
     <amp-img src="welcome.jpg" alt="Welcome" height="400" width="800"></amp-img>
 
   </body>
-</html> -->
+</html>  -->
  
 
 
