--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
             name: fullname,
               context: {
                 campaign: {
-                  name: "TPS Innovation Newsletter",
-                  source: "Newsletter",
-                  medium: "email",
-                  term: "tps reports",
-                  content: "image link"
+                  name: "TESTIDENTIFYUTMSS",
+                  source: "TESTIDENTIFYUTMSS",
+                  medium: "TESTIDENTIFYUTMSS",
+                  term: "TESTIDENTIFYUTMSS",
+                  content: "TESTIDENTIFYUTMSS"
                 }
               }
         });
