--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             destination: destination, 
             details: details
         };
-        analytics.identify('NEW IDENTIFYYY', {
+        analytics.identify('4444', {
             email: email, 
             name: fullname,
               context: {
