--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       }
         analytics.track({
           userId: '019mr8mf4r',
-          event: 'Purchased an Item',
+          event: 'TRACK TESTT',
           properties: {
             revenue: 39.95,
             shippingMethod: '2-day'
@@ -90,14 +90,11 @@
                   return decodeURIComponent(results[1]).replace(/\W/gi, ' ');
                   }
                 };
-
-
                 function campaignParams() {
                 var campaign_keywords = 'utm_source utm_medium utm_campaign utm_content utm_term'.split(' ')
                     , kw = ''
                     , params = {}
                     , first_params = {};
-
                 var index;
                 for (index = 0; index < campaign_keywords.length; ++index) {
                   kw = getQueryParam(document.URL, campaign_keywords[index]);
@@ -111,17 +108,12 @@
                     first_params[campaign_keywords[index] + ' [first touch]'] = kw;
                   }
                 }
-
                 mixpanel.people.set(params);
                 mixpanel.people.set_once(first_params);
                 mixpanel.register(params);
                 }
-
-
-
                 campaignParams();
                 mixpanel.identify()
-
         });
     </script>
 </body> 
