--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>What is your favorite place to travel?</h1>
 <p>I am building a directory of the sweetest travel destinations.</p>
 
-
+</body>
 <script>
 
 analytics.identify({
