--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <p>I am building a directory of the sweetest travel destinations.</p>  
 <form name="travel" onsubmit="identify(event)">
      What is your favorite travel destination?
-    <input name="destination" required="" size="81" type="text"/> 
+    <input name="destination"  size="81" type="text"/> 
     <br><br><br> 
     Any recommendations (cool things to do, places to visit or restaurants to eat)? 
     <br><br> 
-    <textarea cols="81" name="details" required="" rows="10">
+    <textarea cols="81" name="details"  rows="10">
     </textarea> 
     <br><br> 
-    Name: <input name="fullname" required="" size="75" type="text"/> 
+    Name: <input name="fullname"  size="75" type="text"/> 
     <br><br> 
-    Email: <input name="email" required="" size="75" type="email"/> 
+    Email: <input name="email"  size="75" type="email"/> 
     <br><br>
     <input name="submit" type="submit" value="submit"/>
 </form> 
