--- a/index.html
+++ b/index.html
@@ -54,13 +54,8 @@
 
         });
 
-        analytics.track("web??", {
-          userId: '34',
-          context: {
-            device: {
-              id: 4444444
-            }
-          }
+        analytics.track("UA TEST", {
+          userId: '12345',
         });
       }
 </script>
