--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
           }
 
         });
+          
+      analytics.track('Product Viewed', {
+          userId: '12345',
+          event: 'Product Viewed',
+          // noninteraction: 1
+        });
 
         analytics.track("UA TEST", {
           userId: '12345',
