--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           
       analytics.track('Product Viewed', {
           userId: '12345',
-          event: 'Product Viewed',
+//           event: 'Product Viewed',
           // noninteraction: 1
         });
 
