--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       analytics.track('Product Viewed', {
           userId: '12345',
 //           event: 'Product Viewed',
-          // noninteraction: 1
+          noninteraction: 1
         });
 
         analytics.track("UA TEST", {
