--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         analytics.track("UA TEST", {
           userId: '12345',
-          nonInteraction: 1
+//           nonInteraction: 1
         });
       }
 </script>
