--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       analytics.track('Product Viewed', {
         product_id: 1234,
         sku: 5678,
-        name: 'Test,
+        name: 'Test',
         price: 10,
         url: 'test.com',
         category: 'test,
