--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
         name: 'Test',
         price: 10,
         url: 'test.com',
-        category: 'test,
-        brand: 'test,
-        trade: 'test,
+        category: 'test',
+        brand: 'test',
+        trade: 'test',
         nonInteraction: 1
        }); 
 
