--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head> 
 <body> 
-<h1>What is your favorite place to travel?</h1> 
+<h1 id="test">What is your favorite place to travel?</h1> 
 <p>I am building a directory of the sweetest travel destinations.</p>  
 <form name="travel" onsubmit="identify(event)">
      What is your favorite travel destination?
@@ -77,6 +77,12 @@
 //           nonInteraction: 1
         });
       }
+        
+   var link = document.getElementById('test');
+
+    analytics.trackLink(link, 'Clicked Free-Trial Link', {
+      plan: 'Enterprise'
+    });
 </script>
 </body> 
 </html>
