--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         });
       }
         
-   var link = document.getElementById('test');
+   var link = document.getElementsByTagName('h1');
 
     analytics.trackLink(link, 'Clicked Free-Trial Link', {
       plan: 'Enterprise'
