--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             details: details
         };
 
-        analytics.identify('34', {
+        analytics.identify({
           context: {
             device: {
               id: 4444444
