--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       analytics.load("cHAKBpweBEHhArk4dEfoox5CkwfUbYFx", {
        integrations: {
           FacebookPixel: false,
-          Mixpanel: 'false'
+          "Mixpanel": 'false'
        }
     });
       analytics.page("webPage?");
