--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             details: details
         };
 
-        analytics.identify({
-          context: {
-            device: {
-              id: 4444444
-            }
-          }
+//         analytics.identify({
+//           context: {
+//             device: {
+//               id: 4444444
+//             }
+//           }
 
-        });
+//         });
           
 //       analytics.track('Product Viewed', {
 //           userId: '12345',
