--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 //         });
           
       analytics.track('Product Viewed', {
+        userId: 23,
         product_id: 1234,
         sku: 5678,
         name: 'Test',
