--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
             details: details
         };
 
-        analytics.identify('34', {
-          context: {
-            device: {
-              id: 4444444
-            }
-          }
-        });
+analytics.identify('123456', {
+  name: 'Grace Hopper',
+  email: 'grace@usnavy.gov'
+});
           
 //       analytics.track('Product Viewed', {
 //           userId: '12345',
