--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 //         nonInteraction: 1
 //        }); 
 
-        analytics.track("VERO TESTTTT", {
+        analytics.track("Test Track", {
 //           nonInteraction: 1
         }, {integrations: {"Vero": false}});
       }
