--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             details: details
         };
 
-// analytics.identify('123456', {
-//   name: 'Grace Hopper',
-//   email: 'grace@usnavy.gov'
-// });
+analytics.identify('123456', {
+  name: 'Grace Hopper',
+  email: 'grace@usnavy.gov'
+});
           
 //       analytics.track('Product Viewed', {
 //           userId: '12345',
