--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
+    <script src="https://cdn.optimizely.com/js/15303960539.js"></script>
     <title>Home Test<span id="selection-marker-1" class="redactor-selection-marker"></span></title> 
 
     <script>
