--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
   analytics.load("cHAKBpweBEHhArk4dEfoox5CkwfUbYFx");
   analytics.page();
   }}();
+        
+  var player;
+function onYouTubeIframeAPIReady() {
+    player = new YT.Player('player', {
+    height: '390',
+    width: '640',
+    videoId: 'M7lc1UVf-VE'
+    });
+    var ytAnalytics = new window.analyticsPlugins.YT(player, 'AIzaSyChn6slAlJZbjbrkEky-TZcWPePoFvOwQk')
+    ytAnalytics.initialize()
+}
 </script>
 
 </head> 
