--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 analytics.load("cHAKBpweBEHhArk4dEfoox5CkwfUbYFx");
 }}();
 
+console.log(analytics.user().id(), 'userid')
+console.log(analytics.user().anonymousId(), 'anonymousId')
+
+
 if (!analytics.user().id()) {
 
   analytics.identify('12091906-01011992', {
     name: 'TEST NAME',
     email: 'TESTEMAIL@EMAIL.COM'
   });
-  
+
 }
   analytics.page();
-        
+
 
 </script>
 
