--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 analytics.load("cHAKBpweBEHhArk4dEfoox5CkwfUbYFx");
 }}();
 
-console.log(analytics.user().id(), 'userid')
+console.log(analytics.user(), 'userid')
 console.log(analytics.user().anonymousId(), 'anonymousId')
 
 
@@ -22,6 +22,7 @@ if (!analytics.user().id()) {
 
 }
   analytics.page();
+
 
 
 </script>
