--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   url: 'https://segment.com/pricing',
   path: '/pricing',
   referrer: 'https://segment.com/warehouses'
-}, {integrations: {'Google AdWords New': false}});
+}, {integrations: {'Google Analytics': false}});
   }}();
 </script>
 
