--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head> 
 <body> 
 <h1 id="test">What is your favorite place to travel?TEST</h1> 
-<p>I am building a directory of the sweetest travel destinations.</p>  
+<p>First test paragraph.</p>  
+<p>Second test paragraph.</p>  
+
 <form name="travel" onsubmit="identify(event)">
      What is your favorite travel destination?
     <input name="destination"  size="81" type="text"/> 
