--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   }}();
 </script>
 
+ <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
 </head> 
 <body> 
