--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 
 </head> 
 <body> 
+    <amp-analytics type="segment">
+<script type="application/json">
+  {
+    "vars": {
+      "writeKey": "PQxm7qAMKBSoygn8on8pAdqWSFV4j6RO",
+      "name": "My Page Name"
+    }
+  }
+</script>
+</amp-analytics>
 <h1 id="test">What is your favorite place to travel?TEST</h1> 
 <p>First test paragraph.</p>  
 <p>Second test paragraph.</p>  
