--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 <p>First test paragraph.</p>  
 <p>Second test paragraph.</p>  
 
+    <h2>Key Pressed</h2>
+    <p id="key-counter"> 0 </p>
+
 <form name="travel" onsubmit="identify(event)">
      What is your favorite travel destination?
     <input name="destination"  size="81" type="text"/> 
