--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ analytics.identify('123456', {
    
         console.log('something')
         var keyCounter = document.getElementById('key-counter');
-            var number = computerScore.innerHTML;
+            var number = keyCounter.innerHTML;
             number++;
             keyCounter.innerHTML = number;
     
