--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     
     <h2>Mouse Moved</h2>
     <p id="mouse-counter"> 0 </p>
+    
+    	<p><a href="/amp.html">Amp Test Page</a></p>   
+
 
 <form name="travel" onsubmit="identify(event)">
     <input name="submit" type="submit" value="submit" id="testLink"/>
