--- a/amp.html
+++ b/amp.html
@@ -20,7 +20,9 @@
 <script type="application/json">
   {
     "vars": {
-      "writeKey": "PQxm7qAMKBSoygn8on8pAdqWSFV4j6RO"
+      "writeKey": "PQxm7qAMKBSoygn8on8pAdqWSFV4j6RO",
+      "canonicalUrl": "testUrlValue"
+ 
     },
     "linkers": {
       "enabled": true
