--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     	<p><a href="/amp.html">Amp Test Page</a></p>   
 
 
-<form name="travel" onsubmit="identify(event)">
+<form id="formTest" name="travel" onsubmit="identify(event)">
+    <input type="text">
     <input name="submit" type="submit" value="submit" id="testLink"/>
 </form> 
     <script type="text/javascript">
