--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   
-<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank">
+<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank" onsubmit='return false'>
 	<label for="name">Name</label><br /> 
 </form>
 <form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank">
