--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
 
 <body>
   
-<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank" onsubmit='return false'>
-	<label for="name">Name</label><br /> 
-</form>
-<form accept-charset="UTF-8" action="action_page.php" autocomplete="off" method="GET" target="_blank">
+<form accept-charset="UTF-8" autocomplete="off" method="GET" target="_blank" onsubmit='return false'>
 	<label for="name">Name</label><br /> 
 	<input checked="checked" name="color" type="radio" value="red" /> Red <br /> 
 	<input name="color" type="radio" value="green" /> Green <br />  
