--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<input checked="checked" name="color" type="radio" value="red" /> Red <br /> 
 	<input name="color" type="radio" value="green" /> Green <br />  
 	<input name="democheckbox" type="checkbox" value="1" /> Checkbox<br /> 
-	<button type="submit" value="Submit">Submit</button>
+	<button type="submit" value="Submit">Submit Button</button>
 </form>
 
   <script src="js/scripts.js"></script>
