--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 	<button type="submit" value="Submit">Submit Button</button>
 </form>
 
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts.js">
+	analytics.track('Article Completed', {
+  title: 'How to Create a Tracking Plan',
+  course: 'Intro to Analytics',
+});
+   </script>
 </body>
 </html>
