--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <form accept-charset="UTF-8" autocomplete="off" method="GET" target="_blank" onsubmit='return false'>
 	<label for="name">Name</label><br /> 
 	<input checked="checked" name="color" type="radio" value="red" /> Red <br /> 
-	<input name="color" type="radio" value="green" /> Green <br />  
+	<input name="color" type="radio" value="green" /> Purple <br />  
 	<input name="democheckbox" type="checkbox" value="1" /> Checkbox<br /> 
 	<button type="submit" value="Submit">Submit Button</button>
 </form>
