--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
   
   <script>
-!function(){var e=window.analytics=window.analytics||[];if(!e.initialize)if(e.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{e.invoked=!0,e.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"],e.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),e.push(a),e}};for(var t=0;t<e.methods.length;t++){var a=e.methods[t];e[a]=e.factory(a)}e.load=function(t,a){var n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(n,r),e._loadOptions=a},e.SNIPPET_VERSION="4.13.1",e.load("cHAKBpweBEHhArk4dEfoox5CkwfUbYFx"),e.page()}}()</script>
+!function(){var e=window.analytics=window.analytics||[];if(!e.initialize)if(e.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{e.invoked=!0,e.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"],e.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),e.push(a),e}};for(var t=0;t<e.methods.length;t++){var a=e.methods[t];e[a]=e.factory(a)}e.load=function(t,a){var n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(n,r),e._loadOptions=a},e.SNIPPET_VERSION="4.13.1",e.load("cHAKBpweBEHhArk4dEfoox5CkwfUbYFx"),e.page()}}()
 analytics.track('Article Completed Initial', {
   title: 'How to Create a Tracking Plan',
   course: 'Intro to Analytics',
 });
+	  </script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@ analytics.track('Article Completed Initial', {
 <form accept-charset="UTF-8" autocomplete="off" method="GET" target="_blank" onsubmit='return false'>
 	<label for="name">Name</label><br /> 
 	<input checked="checked" name="color" type="radio" value="red" /> Red <br /> 
-	<input name="color" type="radio" value="green" /> Green <br />  
+	<input name="color" type="radio" value="green" /> Orange <br />  
 	<input name="democheckbox" type="checkbox" value="1" /> Checkbox<br /> 
 	<button type="submit" value="Submit">Submit Button</button>
 </form>
