--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ analytics.track('Article Completed Initial', {
   title: 'How to Create a Tracking Plan',
   course: 'Intro to Analytics',
 });
+	  e.track('Article Completed Initial e', {
+  title: 'How to Create a Tracking Plan',
+  course: 'Intro to Analytics',
+});
 	  </script>
 </head>
 
