--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<input checked="checked" name="color" type="radio" value="red" /> Red <br /> 
 	<input name="color" type="radio" value="green" /> Orange <br />  
 	<input name="democheckbox" type="checkbox" value="1" /> Checkbox<br /> 
+	<input type="text">
 	<button type="submit" value="Submit">Submit Button</button>
 </form>
 
