--- a/index.html
+++ b/index.html
@@ -4,35 +4,20 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Spencer Test Site</title>
+  <title>The HTML5 Herald</title>
   <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
 
-  
-<script>
-  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.13.1";
-  analytics.load("RpWn4U1XD1o4DdIVFBzCgZ76XXNaDW0D");
-  analytics.page();
-  }}();
-</script>
 
+  <script>
+    !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.13.1";
+    analytics.load("RpWn4U1XD1o4DdIVFBzCgZ76XXNaDW0D");
+    analytics.page();
+    }}();
+  </script>
 </head>
 
 <body>
-  
-<form accept-charset="UTF-8" autocomplete="off" method="GET" target="_blank" onsubmit='return false'>
-	<label for="name">Name</label><br /> 
-	<input checked="checked" name="color" type="radio" value="red" /> Red <br /> 
-	<input name="color" type="radio" value="green" /> Orange <br />  
-	<input name="democheckbox" type="checkbox" value="1" /> Checkbox<br /> 
-	<input type="text">
-	<button type="submit" value="Submit">Submit Button</button>
-</form>
-
-  <script src="js/scripts.js">
-
-   </script>
+SOMETHING
 </body>
 </html>
