--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ SOMETHING
 
 <script>
   // pre-fill FormData from the form
-  let formData = new FormData(document.getElementsByTagName("header")[0]);
+  let formData = new FormData(document.getElementsByTagName("form")[0]);
 
 
   // send it out
