--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 SOMETHING
   <form name="person">
-  <input name="name" value="John">
+  <input name="name" value="Jane">
   <input name="surname" value="Smith">
 </form>
   
