--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <body>
 SOMETHING
-<button type="button">Click Me!</button>
+<button type="button">Button 1!</button>
+<button type="button">Button 2</button>
+
 
   
 
