--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     analytics.page();
     }}();
     
-    var SMW1 = function({ payload, next, integrations }) {
+    function SWM1 ({ payload, next, integrations }) {
       payload.obj.messageId = "customMessageId";
       next(payload);
     };
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-SOMETHINGELSE
+SOMETHINGELSE!
 <button type="button">Button 1</button>
 <button type="button">Button 2</button>
 
