--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     analytics.page();
     }}();
     
-    function SWM1 ({ payload, next, integrations }) {
-      payload.obj.messageId = "customMessageId";
-      next(payload);
-    };
+//     function SWM1 ({ payload, next, integrations }) {
+//       payload.obj.messageId = "customMessageId";
+//       next(payload);
+//     };
   </script>
 </head>
 
