--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-SOMETHINGELSE!
+SOMETHINGELSE
 <button type="button">Button 1</button>
 <button type="button">Button 2</button>
 
