--- a/index.html
+++ b/index.html
@@ -6,25 +6,19 @@
 
   <title>The HTML5 Herald</title>
   <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
 
+  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <script>
+    !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.13.1";
+    analytics.load("ytE4KGIKLw1fkuXj6LbMhgsZ5ewQz7iw");
+    analytics.page();
+    }}();
+  </script>
 
-
-<script>
-  !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on","addSourceMiddleware","addIntegrationMiddleware","setAnonymousId","addDestinationMiddleware"];analytics.factory=function(e){return function(){var t=Array.prototype.slice.call(arguments);t.unshift(e);analytics.push(t);return analytics}};for(var e=0;e<analytics.methods.length;e++){var key=analytics.methods[e];analytics[key]=analytics.factory(key)}analytics.load=function(key,e){var t=document.createElement("script");t.type="text/javascript";t.async=!0;t.src="https://cdn.segment.com/analytics.js/v1/" + key + "/analytics.min.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(t,n);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.13.1";
-  analytics.load("ytE4KGIKLw1fkuXj6LbMhgsZ5ewQz7iw");
-  analytics.page();
-  }}();
-</script>
 </head>
 
 <body>
-SOMETHING
-<button type="button">Button 1</button>
-<button type="button">Button 2</button>
-
-
-  
-
-<select id="frequency" class="" name="attribute_frequency" data-attribute_name="attribute_frequency" data-show_option_none="yes"><option value="">Choose an option</option><option value="EVERY WEEK" class="attached enabled">EVERY WEEK</option><option value="EVERY 2 WEEKS" class="attached enabled">EVERY 2 WEEKS</option><option value="EVERY 3 WEEKS" class="attached enabled">EVERY 3 WEEKS</option><option value="EVERY 4 WEEKS" class="attached enabled">EVERY 4 WEEKS</option><option value="PREMIUM WEEKLY - SYDNEY ONLY" class="attached enabled">PREMIUM WEEKLY - SYDNEY ONLY</option></select>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
