--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
         if (hasAllFields) {
 
         next(payload);
+          console.log('has all fields')
 
+        } else {
+          console.log('missing some fields')
         }
+          
 
         }
 
