--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               var next = input.next;
               var payload = input.payload;
               console.log("Segment fired an event: ", payload.type());
+    console.log("UserId: ", payload.userId());
               next(payload);
             });  analytics.load("2eF2n5qVhSvBsaOurcBG5PbByLemXngX");
   analytics.page();
