--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   analytics.addSourceMiddleware(function (input) {
               var next = input.next;
               var payload = input.payload;
-        if (payload.userId) {
+        if (analytics.user().id()) {
             console.log('userId present')
             } else {
             console.log('no userId')
