--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
               console.log("Segment fired an event: ", payload.type());
     console.log("UserId: ", payload.userId());
               next(payload);
-            });  analytics.load("2eF2n5qVhSvBsaOurcBG5PbByLemXngX");
+            });  
+ analytics.load("2eF2n5qVhSvBsaOurcBG5PbByLemXngX");
   analytics.page();
   }}();
 </script>
@@ -32,6 +33,6 @@
 </head>
 
 <body>
-  SOMETHING
+  SOMETHINGELSE
 </body>
 </html>
