--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     amplitude.getInstance().init("3d52e9bf48a5cff2959b4cc6572b20bf");
     
-    var event = “Button Clicked”;
-    amplitude.getInstance().logEvent(event);
+
+    amplitude.getInstance().logEvent("UA Test");
   </script>
 
 
