--- a/index.html
+++ b/index.html
@@ -23,12 +23,19 @@
   analytics.load("cHAKBpweBEHhArk4dEfoox5CkwfUbYFx");
   analytics.page();
   }}();
+  
+  addSourceMiddleware(SMW1);
+
+  let SMW1 = function({ payload, next, integrations }) {
+    payload.messageId = 'ajs-next-3dbe9e7c884432a98cb4c40307e55a82';
+    next(payload);
+  };
 </script>
 
 
 </head>
 
 <body>
-  SOMETHINGELSE
+  SOMETHINGELSE2
 </body>
 </html>
