--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   analytics.addSourceMiddleware(SMW1);
 
   let SMW1 = function({ payload, next, integrations }) {
-    payload.messageId = 'ajs-next-3dbe9e7c884432a98cb4c40307e55a82';
+    payload.obj.messageId = 'ajs-next-3dbe9e7c884432a98cb4c40307e55a82';
     next(payload);
   };
 </script>
